--- a/misc/Dockerfile-apt
+++ b/misc/Dockerfile-apt
@@ -13,9 +13,12 @@ RUN echo -e '#!/bin/bash\n"$@" || { sleep 5 ; "$@" ; } || { sleep 15 ; "$@" ; }'
 
 # make sure getpwuid() works, and ~/ is writable, otherwise many tools break
 ARG USERGROUP
-RUN mkdir -m 0755 -p /cbuild/ && cp /root/.bashrc /cbuild/ && \
-  groupadd --gid ${USERGROUP#*:} cbuild && useradd --uid ${USERGROUP%:*} --gid ${USERGROUP#*:} --home-dir /cbuild cbuild && \
-  chown -R ${USERGROUP} /cbuild
+RUN mkdir -m 0755 -p /dbuild/ && cp /root/.bashrc /dbuild/ && \
+  groupadd --gid ${USERGROUP#*:} dbuild && useradd --uid ${USERGROUP%:*} --gid ${USERGROUP#*:} --home-dir /dbuild dbuild && \
+  chown -R ${USERGROUP} /dbuild
+
+# Copy user home template
+COPY .dbuild/ /dbuild/
 
 # Upgrade packages
 RUN retry apt-get update && retry apt-get -y upgrade
